<resources>
    <string name="app_name">Vaccination Passport</string>
    <string name="tv_name">Name:</string>
    <string name="tv_age">Age:</string>
    <string name="tv_passNr">Passport Nr:</string>
    <string name="tv_nrVac">Nr of Vaccines:</string>
    <string name="button_minus">-</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="language_key">at.tugraz.vaccinationpassport.langauge</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="see_my_vaccines">See my Vaccines</string>
    <string name="loginButton">Login</string>
    <string name="errorMessageDefault">Error Message Field</string>
    <string name="passportNumberHint">Passport Number</string>
    <string name="passwordHint">Password</string>
    <string name="loginTitle">Login</string>
    <string name="noAccountInformation">Don\'t have an account?</string>
    <string name="singUpLink">Sign up</string>
    <string name="disease">Disease</string>
    <string name="date">Date</string>
    <string name="invalid_login_details">Invalid Passport Number / Password</string>
    <string name="could_not_connect_to_server">Could not connect to the server</string>
    <string name="registering_not_implemented">Registering is not Implemented</string>

    <string name="addVacTitle">Add Vaccine</string>
    <string name="vacNameHint">Vaccine Name</string>
    <string name="vacDateHint">Date: dd.mm.yyyy</string>
    <string name="vacTimeHint">Time: hh:mm</string>
    <string name="addButton">Add</string>
</resources>