<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    android:id="@+id/btn_context_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/btn_about_page"
        android:title="About"
        />
    <item android:id="@+id/btn_language_ru"
        android:title="Russian"
        />
    <item android:id="@+id/btn_language_en"
        android:title="English"
        />
</menu>