<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_layout"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.VaccinationPassport"><TextView
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Vaccination Passport"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>